fixed issue with dots getting cut off in safari #259

--- a/django-verdant/rca/static/rca/css/modules-desktop-small.less
+++ b/django-verdant/rca/static/rca/css/modules-desktop-small.less
@@ -43,6 +43,7 @@
 
 .bx-wrapper {
     padding-bottom:20px; /* necessary to give pager dots space to exist */
+    overflow: visible; /* because the padding above doesn't work in safari and dots get cut off */
 
     .bx-next, .bx-prev {
         .transition(opacity 0.3s ease);
